vlib/v/checker/tests/generics_struct_field_fn_args_err.out
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:21:20: error: expected 0 arguments, but got 1
   19 |     }
   20 |     println(fun0.call())
   21 |     println(fun0.call(1234))
      |                       ~~~~
   22 |     println(fun0.call(1234, 5678))
   23 |
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:22:20: error: expected 0 arguments, but got 2
   20 |     println(fun0.call())
   21 |     println(fun0.call(1234))
   22 |     println(fun0.call(1234, 5678))
      |                       ~~~~~~~~~~
   23 |
   24 |     fun1 := Fun<fn (int) int>{
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:29:15: error: expected 1 arguments, but got 0
   27 |
   28 |     println(fun1.call(42))
   29 |     println(fun1.call())
      |                  ~~~~~~
   30 |     println(fun1.call(42, 43))
   31 |
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:30:24: error: expected 1 arguments, but got 2
   28 |     println(fun1.call(42))
   29 |     println(fun1.call())
   30 |     println(fun1.call(42, 43))
      |                           ~~
   31 |
   32 |     println(fun1.call(true))
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:32:20: error: cannot use `bool` as `int` in argument 1 to `Fun<fn (int) int>.call`
   30 |     println(fun1.call(42, 43))
   31 |
   32 |     println(fun1.call(true))
      |                       ~~~~
   33 |     println(fun1.call('text'))
   34 |     println(fun1.call(22.2))
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:33:20: error: cannot use `string` as `int` in argument 1 to `Fun<fn (int) int>.call`
   31 |
   32 |     println(fun1.call(true))
   33 |     println(fun1.call('text'))
      |                       ~~~~~~
   34 |     println(fun1.call(22.2))
   35 | }
vlib/v/checker/tests/generics_struct_field_fn_args_err.vv:34:20: error: cannot use `float literal` as `int` in argument 1 to `Fun<fn (int) int>.call`
   32 |     println(fun1.call(true))
   33 |     println(fun1.call('text'))
   34 |     println(fun1.call(22.2))
      |                       ~~~~
   35 | }
